# VisualRants

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
migrations/2018-12-26-190832_rant_info/: down.sql  up.sql
migrations/2018-12-28-144011_rant_info/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  model.rs  params.rs  schema.rs
