[profile.dev]
panic = "abort"

[package]
name = "visual_rants"
version = "0.1.0"
authors = ["oke vese <okevese@gmail.com>"]

[dependencies]
reqwest = "0.9.5"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
plotlib = "0.3.0"
structopt = "0.2.10"
diesel = {version="*", features=["mysql"]}
dotenv = "*"